--- a/movies/templates/movies/detail.html
+++ b/movies/templates/movies/detail.html
@@ -83,7 +83,7 @@
                 <input class="rating__input" name="grade" id="grade-4" value="4" type="radio">
                 <label aria-label="5 stars" class="rating__label" for="grade-5"><i
                     class="rating__icon rating__icon--star fa fa-star"></i></label>
-                <input class="rating__input" name="grade" id="grade-5" value="5" type="radio">
+                <input class="rating__input" name="grade" id="grade-5" value="5" type="radio" checked>
               </div>
             </div>
             {% comment %} Comment Input {% endcomment %}
