--- a/templates/base.html
+++ b/templates/base.html
@@ -189,8 +189,8 @@
 
     {% comment %} 음성인식 Modal {% endcomment %}
       <div class="modal" id="voiceModal">
-        <div class="modal-dialog" style="margin-top:200px; margin-left: 600px;">
-          <div class="modal-content" style="width: 700px; height: 350px; border-radius: 30px; background-color: rgba(255,255,192,0.1); backdrop-filter: blur(10px); box-shadow: 2px 7px 15px 8px rgba(0,0,0,0.3);">
+        <div class="modal-dialog" style="max-width: 40%; margin-top:200px;">
+          <div class="modal-content" style="min-width: 700px; min-width: 700px; min-height: 350px; border-radius: 30px; background-color: rgba(255,255,192,0.1); backdrop-filter: blur(10px); box-shadow: 2px 7px 15px 8px rgba(0,0,0,0.3);">
             
             <!-- Modal body -->
             <div class="modal-body">
