--- a/movies/templates/movies/detail.html
+++ b/movies/templates/movies/detail.html
@@ -97,7 +97,7 @@
         </div>
         <div class="app-card__subtext">
           {% comment %} Comment View {% endcomment %}
-          {% for comment in movie.comments.all %}
+          {% for comment in comments %}
           <div id="div{{ comment.id }}" onload="loadFunc()">
             {% comment %} StarsNum {% endcomment %}
             {% if comment.grade == 1 %}
@@ -171,7 +171,7 @@
           <button class="btn btn-warning" style="font-weight: 500px; font-size: 20px; margin-left: 5px; width:100px;"> 리뷰쓰기 </button></a></h4>
 
           {% comment %} Review List {% endcomment %}
-          {% for review in movie.reviews.all %}
+          {% for review in reviews %}
           <div OnClick="location.href ='{% url 'movies:review' review.pk %}'" style="cursor:pointer;">
             <div class="app-card__subtext">
               <div class="d-flex justify-content-between align-items-center">
