--- a/movies/templates/movies/choice.html
+++ b/movies/templates/movies/choice.html
@@ -40,7 +40,7 @@
         <div id="values" class="mt-3 d-none"></div>
         <input id="hexInput" class="d-none">
 
-        <form action="http://127.0.0.1:8000/movies/usercolor_create/" method="POST" id="selectedForm">
+        <form action="{% url 'movies:usercolor_create' %}" method="POST" id="selectedForm">
           {% csrf_token %}
           <button id="selectedButton" class="btn btn-light bg-white mt-3" style="width: 700px; height: 85px;"><span style="font-weight: bolder; font-size: 45px;"></i>이 <span class="pink">색</span>으로 <span class="cyan">보여줘</span>요</span></button>
         </form>
