--- a/templates/base.html
+++ b/templates/base.html
@@ -220,9 +220,8 @@
         </div>
       </div>
 
-    {% comment %} Frame Expansion Modal{% endcomment %}
-    {% block frame_modal %}
-    {% endblock frame_modal %}
+    {% block option_modal %}
+    {% endblock option_modal %}
 
   <!-- Search Event -->
   <script>
