--- a/movies/templates/movies/review.html
+++ b/movies/templates/movies/review.html
@@ -11,7 +11,7 @@
     <div class="content-section mt-3">
       <div class="app-card mt-3 d-flex">
         <div class="d-flex justify-content-between align-items-center">
-          <h3> {{ review.title }} </h3>
+          <h1> {{ review.title }} </h1>
           {% if request.user == review.user %}
           <div class="d-flex">
             <button class="btn btn-success" onclick="location.href = '{% url 'movies:review_update' review.pk %}'" style="font-weight: 250px; font-size: 15px; margin-left: 5px; width:60px;">수정</button>
@@ -25,10 +25,18 @@
         <h5 style="text-align: right;"> {{ review.user }} </h5>
       </div>
     </div>
+    
+    {% if review.draw %}
+    <div class="content-section">
+      <div class="app-card mt-3">
+        <img src="{{ review.draw.url }}" alt="" style="width:400px; height:400px; border-radius:10%; opacity: 0.8;">
+      </div>
+    </div>
+    {% endif %}
 
     <div class="content-section">
       <div class="app-card mt-3">
-        <h5> {{ review.content }} </h5>
+        <h3> {{ review.content }} </h3>
       </div>
     </div>
 
